src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>EBITDA_amount__c</fullName>
        <label>EBITDA S/</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBITDA_per__c</fullName>
        <label>EBITDA %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Has_financial_sponsor__c</fullName>
        <label>Has financial sponsor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROA_per__c</fullName>
        <label>ROA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROE_per__c</fullName>
        <label>ROE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <description>Campo utilitario para reportes. Ejm &quot;Sectores&quot;</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acid_liquidity_number__c</fullName>
        <label>Acid liquidity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alert__c</fullName>
        <formula>IF(alert_desc__c,IMAGE(&apos;/resource/Red_Flag_Icon&apos;,&quot;&quot;,20,20),IMAGE(&apos;/resource/Green_Flag_Icon&apos;,&quot;&quot;,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alert_desc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bank_turnover_volume_amount__c</fullName>
        <label>Business volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>banking_system_classification_desc__c</fullName>
        <label>Banking system classification desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>banking_system_classification_type__c</fullName>
        <label>Banking system classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bbva_classification_desc__c</fullName>
        <label>BBVA classification desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bbva_classification_type__c</fullName>
        <label>BBVA classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bureau_classification_type__c</fullName>
        <label>Credit bureau</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bureau_date__c</fullName>
        <label>Credit bureau date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>business_cycle_amount__c</fullName>
        <label>Business cycle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cash_flow_amount__c</fullName>
        <label>Cash flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>collection_days_number__c</fullName>
        <label>Collection days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>commercial_strategy__c</fullName>
        <formula>CASE(UPPER(commercial_strategy_class_name__c),&apos;BÁSICO&apos;,IMAGE(&apos;/resource/White_Circle_Icon&apos;,&quot;&quot;,20,20) + &apos; &apos; + commercial_strategy_class_name__c,&apos;POTENCIAL&apos;,IMAGE(&apos;/resource/Grey_Circle_Icon&apos;,&quot;&quot;,20,20) + &apos; &apos; + commercial_strategy_class_name__c,&apos;TRANSACCIONAL&apos;,IMAGE(&apos;/resource/Light_Blue_Circle_Icon&apos;,&quot;&quot;,20,20) + &apos; &apos; + commercial_strategy_class_name__c,&apos;ESTRELLA&apos;,IMAGE(&apos;/resource/Blue_Circle_Icon&apos;,&quot;&quot;,20,20) + &apos; &apos; + commercial_strategy_class_name__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial strategy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commercial_strategy_code__c</fullName>
        <label>Commercial strategy code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>commercial_strategy_date__c</fullName>
        <label>Commercial strategy date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>commercial_strategy_class_name__c</fullName>
        <label>Commercial strategy description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company_seniority_date__c</fullName>
        <label>Company issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>company_seniority_year__c</fullName>
        <formula>TEXT(YEAR( company_seniority_date__c ))</formula>
        <label>Company issue year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country_id__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crossborder_type__c</fullName>
        <label>Crossborder</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_relationship_date__c</fullName>
        <label>Client relationship issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>customer_relationship_year__c</fullName>
        <formula>TEXT(YEAR( customer_relationship_date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client relationship issue year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>debt_EBITDA_per__c</fullName>
        <label>Debt / EBITDA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>dfb_sales_per__c</fullName>
        <label>DFB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>economic_activity_sector__c</fullName>
        <label>Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>economic_activity_subsector__c</fullName>
        <label>Subsector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>entity_id__c</fullName>
        <label>Organization code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financial_debt_amount__c</fullName>
        <label>Financial debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>financial_program_expiry_date__c</fullName>
        <label>Financial programme due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fund_operational_needs_amount__c</fullName>
        <label>Operational funds needs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>main_code_id__c</fullName>
        <label>Client Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>margin_ordinary_amount__c</fullName>
        <label>Ordinary margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>net_cash_desc__c</fullName>
        <label>Net cash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_phone_number__c</fullName>
        <label>Other phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ownership_grade_per__c</fullName>
        <label>Ownership grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>payback_amount__c</fullName>
        <label>Payback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>payment_days_number__c</fullName>
        <label>Payment days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>risk_strategy_code__c</fullName>
        <label>Strategy code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>risk_strategy_date__c</fullName>
        <label>Startegy date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>risk_strategy_class_name__c</fullName>
        <label>Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_var_per__c</fullName>
        <label>Sales variation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>segment_desc__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segment_id__c</fullName>
        <label>Segment code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stock_days_number__c</fullName>
        <label>Stock days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>structural_debt_amount__c</fullName>
        <label>Structural financial debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<externalId>true</externalId>
        <label>Unique identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>watchlist_calif_id__c</fullName>
        <label>Watchlist</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>working_capital_number__c</fullName>
        <label>Working capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>Owner_calculated__c</fullName>
        <formula>HYPERLINK( OwnerId ,  Owner.FirstName + &apos; &apos; +  Owner.LastName ,&apos;SELF&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>empty_value__c</fullName>
        <label>Empty value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_code__c</fullName>
        <formula>branch_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_level2_desc__c</fullName>
        <formula>branch_id__r.branch_level2_desc__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_level3_desc__c</fullName>
        <formula>branch_id__r.branch_level3_desc__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_level4_desc__c</fullName>
        <formula>branch_id__r.branch_level4_desc__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_name_path_desc__c</fullName>
        <label>Banking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_name__c</fullName>
        <formula>branch_id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>business_area_desc__c</fullName>
        <label>Business Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>business_group_id__c</fullName>
        <label>Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comercial_strategy_classification_name__c</fullName>
        <label>Commercial Strategy Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>curr_company_turnover_amount__c</fullName>
        <label>Company Turnover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>direct_debt_amount__c</fullName>
        <label>Direct Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fee_amount__c</fullName>
        <label>fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>financial_margin_amount__c</fullName>
        <label>financial margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>indirect_debt_amount__c</fullName>
        <label>indirect Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>managed_resources_amount__c</fullName>
        <label>Managed Resources</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>net_income_amount__c</fullName>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>regional_area_name__c</fullName>
        <label>Regional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_and_sale_cost_amount__c</fullName>
        <label>Sales And Sale Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>account_banking_syst_debt_sum_last_date__c</fullName>
        <label>Account Banking Syst. Debt Sum Last Date</label>
        <summarizedField>Account_Banking_System_Debt_Summary__c.year_month_day_date__c</summarizedField>
        <summaryForeignKey>Account_Banking_System_Debt_Summary__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_banking_system_debt_last_date__c</fullName>
        <label>Account Banking System Debt Last Date</label>
        <summarizedField>Account_Banking_System_Debt__c.year_month_day_date__c</summarizedField>
        <summaryForeignKey>Account_Banking_System_Debt__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_bbva_information_last_date__c</fullName>
        <label>Account BBVA Information Last Date</label>
        <summarizedField>Account_BBVA_Information__c.year_month_day_date__c</summarizedField>
        <summaryForeignKey>Account_BBVA_Information__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_comm_strategy_results_last_date__c</fullName>
        <label>Account Comm Strategy Results Last Date</label>
        <summarizedField>Account_Commercial_Strategy_Results__c.year_month_day_date__c</summarizedField>
        <summaryForeignKey>Account_Commercial_Strategy_Results__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_payroll_last_date__c</fullName>
        <label>Account Payroll Last Date</label>
        <summarizedField>Account_Payroll__c.year_month_day_date__c</summarizedField>
        <summaryForeignKey>Account_Payroll__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_profitability_type_1_last_date__c</fullName>
        <label>Account Profitability Type 1 Last Date</label>
        <summarizedField>Account_Profitability__c.year_month_day_date__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Profitability__c.profitability_type__c</field>
            <operation>equals</operation>
            <value>01</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Profitability__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_profitability_type_2_last_date__c</fullName>
        <label>Account Profitability Type 2 Last Date</label>
        <summarizedField>Account_Profitability__c.year_month_day_date__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Profitability__c.profitability_type__c</field>
            <operation>equals</operation>
            <value>02</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Profitability__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_profitability_type_3_last_date__c</fullName>
        <label>Account Profitability Type 3 Last Date</label>
        <summarizedField>Account_Profitability__c.year_month_day_date__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Profitability__c.profitability_type__c</field>
            <operation>equals</operation>
            <value>03</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Profitability__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_indicator_type_1_last_date__c</fullName>
        <label>Account Indicator Type 1 Last Date</label>
        <summarizedField>Account_Indicator__c.year_month_day_date__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Indicator__c.indicator_type__c</field>
            <operation>equals</operation>
            <value>01</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Indicator__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_indicator_type_2_last_date__c</fullName>
        <label>Account Indicator Type 2 Last Date</label>
        <summarizedField>Account_Indicator__c.year_month_day_date__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Indicator__c.indicator_type__c</field>
            <operation>equals</operation>
            <value>02</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Indicator__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_bank_classification_last_date__c</fullName>
        <label>Account BBVA Classification Last Date</label>
        <summarizedField>Account_BBVA_Classification__c.year_month_day_date__c</summarizedField>
        <summaryForeignKey>Account_BBVA_Classification__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>account_banking_syst_classif_last_date__c</fullName>
        <label>Account Banking Syst Classif Last Date</label>
        <summarizedField>Account_Banking_System_Classification__c.year_month_day_date__c</summarizedField>
        <summaryForeignKey>Account_Banking_System_Classification__c.account_id__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
	<fields>
        <fullName>customer_excluded_type__c</fullName>
        <label>customer_excluded_type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company_economic_activity_id__c</fullName>
        <label>company_economic_activity_id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Estado_PE25__c</fullName>
        <formula>IF( UPPER( MID(customer_excluded_type__c, 0, 10) ) == &apos;INELEGIBLE&apos; , IMAGE(&apos;/resource/Red_Flag_Icon&apos;,&quot;&quot;,20,20) + &apos; INELEGIBLE&apos;, IF( UPPER( MID(customer_excluded_type__c, 0, 8) ) == &apos;ELEGIBLE&apos; , IMAGE(&apos;/resource/Green_Flag_Icon&apos;,&quot;&quot;,20,20) + &apos; ELEGIBLE&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado PE25</label>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>non_client_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non Client Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>non_client_converted_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Total_campos_obligatorios_llenos__c</fullName>
        <label>Total campos obligatorios llenos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone_area_code__c</fullName>
        <label>Phone Area Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Area_Code_Phone</valueSetName>
        </valueSet>
    </fields>
	<fields>
        <fullName>Total_campos_obligatorios_llenos_inicio__c</fullName>
        <label>Total campos obligatorios llenos inicio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>Group_01__c</fullName>
        <label>Group 01</label>
        <summaryFilterItems>
            <field>Opportunity.Name</field>
            <operation>contains</operation>
            <value>VISITAS G1</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Group_02__c</fullName>
        <label>Group 02</label>
        <summaryFilterItems>
            <field>Opportunity.Name</field>
            <operation>contains</operation>
            <value>VISITAS G2</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Group_03__c</fullName>
        <label>Group 03</label>
        <summaryFilterItems>
            <field>Opportunity.Name</field>
            <operation>contains</operation>
            <value>VISITAS G3</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
	<fields>
        <fullName>Priority__c</fullName>
        <formula>IF( Group_01__c &gt; 0, &quot;VISITAS G1&quot;, IF( Group_02__c &gt; 0, &quot;VISITAS G2&quot;, IF( Group_03__c &gt; 0, &quot;VISITAS G3&quot;, IF( Group_04__c &gt; 0, &quot;VISITAS G4&quot;, NULL ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Is_Migration__c</fullName>
        <label>Is Migration</label>
        <summaryFilterItems>
            <field>Opportunity.Name</field>
            <operation>contains</operation>
            <value>VISITAS G</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Name</field>
            <operation>contains</operation>
            <value>M</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
	<fields>
        <fullName>user_code__c</fullName>
        <description>Código del gestor principal del cliente.</description>
        <formula>Owner.user_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registro Gestor Principal</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>main_code_id__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>segment_desc__c</columns>
        <columns>branch_id__c</columns>
        <columns>Owner_calculated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Record_Type_Client</value>
        </filters>
        <label>Todos los Clientes</label>
    </listViews>
    <listViews>
        <fullName>BE_My_Non_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>other_phone_number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Record_Type_Non_Client</value>
        </filters>
        <label>Mis No Clientes</label>
    </listViews>
    <listViews>
        <fullName>BE_Non_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>other_phone_number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Record_Type_Non_Client</value>
        </filters>
        <label>Todo los No Clientes</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>main_code_id__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>segment_desc__c</columns>
        <columns>branch_id__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Record_Type_Client</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>bureau_classification_type__c</columns>
        <columns>risk_strategy_class_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <recordTypes>
        <fullName>Record_Type_Client</fullName>
        <active>true</active>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type_Economic_Group</fullName>
        <active>true</active>
        <label>Economic Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type_Non_Client</fullName>
        <active>true</active>
        <label>No Cliente</label>
    </recordTypes>
    <recordTypes>
        <fullName>dwp_kitv__Customer</fullName>
        <active>true</active>
        <description>Account customer type</description>
        <label>Customer</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BE_OnlyCreateNonClient</fullName>
        <active>false</active>
        <errorConditionFormula>AND(RecordType.DeveloperName  &lt;&gt;  &apos;Record_Type_Non_Client&apos;,
 AND($Profile.Name &lt;&gt; &apos;Migracion&apos;,$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;Administrador de sistema&apos;))</errorConditionFormula>
        <errorMessage>No tiene los permisos suficientes para crear clientes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BE_PhoneValidationNonClient</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Record_Type_Non_Client&apos;,
IF(NOT(ISPICKVAL(phone_area_code__c, &quot;&quot;)) || NOT(ISBLANK(other_phone_number__c)),
OR(
AND(ISPICKVAL(phone_area_code__c, &quot;01&quot;),LEN(other_phone_number__c) &lt;&gt; 7),
AND(NOT(ISPICKVAL(phone_area_code__c, &quot;01&quot;)),LEN(other_phone_number__c) &lt;&gt; 6),
NOT(ISNUMBER(other_phone_number__c)),
ISPICKVAL(phone_area_code__c, &quot;&quot;),
ISBLANK(other_phone_number__c),
NOT(REGEX(other_phone_number__c, &quot;\\d*&quot;))
),false
)
)</errorConditionFormula>
        <errorDisplayField>other_phone_number__c</errorDisplayField>
        <errorMessage>Please, check that the phone contains  the correct format.</errorMessage>
    </validationRules>
</CustomObject>